// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polishers safeValues integration 1`] = `
Object {
  "array": Array [
    Object {
      "fox": "[redacted]",
    },
    Object {
      "sox": "123",
    },
  ],
  "bar": "bar",
  "function": [Function],
  "my": Object {
    "deep": Object {
      "poem": "foo",
    },
  },
  "withConstant": Object {
    "ans": 42,
    "bar": Array [
      "b",
      "a",
      "r",
    ],
    "baz": "[redacted]",
    "quix": "[redacted]",
  },
}
`;

exports[`polishers values integration 1`] = `
Object {
  "array": Array [
    Object {
      "fox": 123,
    },
    Object {
      "sox": "123",
    },
  ],
  "bar": "bar",
  "function": [Function],
  "my": Object {
    "deep": Object {
      "poem": "foo",
    },
  },
  "withConstant": Object {
    "ans": 42,
    "bar": Array [
      "b",
      "a",
      "r",
    ],
    "baz": 123,
    "quix": "abcdefghijklmnopqrstuvwxyz",
  },
}
`;
